# pydjinni-project-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  pydjinni.yaml  requirements.txt
.github/workflows/: workflow.yml
cmake/modules/: FindPyDjinni.cmake
lib/: CMakeLists.txt  interface.pydjinni
lib/src/: hello_world.cpp
profiles/: android  ios  ios_simulator  macos  windows
tests/: CMakeLists.txt  test.cpp
